Various tweaks.